<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#ff424542"
        android:orientation="horizontal"
        android:padding="4dip" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:gravity="center_horizontal"
            android:text="@string/time_picker_title"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_margin="4dip"
            android:background="@drawable/select_time_btn_bg"
            android:text="@string/time_picker_cancel"
            android:textColor="#6e6e6e" />

        <Button
            android:id="@+id/submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_gravity="right"
            android:layout_margin="4dip"
            android:background="@drawable/select_time_btn_bg"
            android:text="@string/time_picker_done"
            android:textColor="#6e6e6e" />
    </RelativeLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="220dip" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="220dip"
            android:layout_marginLeft="15dip"
            android:layout_marginRight="15dip"
            android:gravity="center"
            android:orientation="horizontal" >

            <com.medialab.lejuju.views.WheelView
                android:id="@+id/year"
                android:layout_width="0.0dip"
                android:layout_height="fill_parent"
                android:layout_weight="1" />

            <com.medialab.lejuju.views.WheelView
                android:id="@+id/month"
                android:layout_width="0.0dip"
                android:layout_height="fill_parent"
                android:layout_weight="1" />

            <com.medialab.lejuju.views.WheelView
                android:id="@+id/day"
                android:layout_width="0.0dip"
                android:layout_height="fill_parent"
                android:layout_weight="1" />

            <com.medialab.lejuju.views.WheelView
                android:id="@+id/hour"
                android:layout_width="0.0dip"
                android:layout_height="fill_parent"
                android:layout_weight="1" />

            <com.medialab.lejuju.views.WheelView
                android:id="@+id/minute"
                android:layout_width="0.0dip"
                android:layout_height="fill_parent"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="220dip"
            android:layout_marginLeft="15dip"
            android:layout_marginRight="15dip"
            android:gravity="center"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0.0dip"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center_vertical|right"
                android:paddingRight="5dip"
                android:textSize="@dimen/date_picker_type_size" />

            <TextView
                android:layout_width="0.0dip"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center_vertical|right"
                android:paddingRight="5dip"
                android:text="@string/select_time_month"
                android:textSize="@dimen/date_picker_type_size" />

            <TextView
                android:layout_width="0.0dip"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center_vertical|right"
                android:paddingRight="5dip"
                android:text="@string/select_time_day"
                android:textSize="@dimen/date_picker_type_size" />

            <TextView
                android:layout_width="0.0dip"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center_vertical|right"
                android:paddingRight="5dip"
                android:text="@string/select_time_hour"
                android:textSize="@dimen/date_picker_type_size" />

            <TextView
                android:layout_width="0.0dip"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center_vertical|right"
                android:paddingRight="5dip"
                android:text="@string/select_time_minute"
                android:textSize="@dimen/date_picker_type_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="220dip"
            android:background="@drawable/com_ttshrk_view_scroll_picker_background" >
        </LinearLayout>
    </FrameLayout>

</LinearLayout>