<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="280dip"
    android:layout_height="220dip"
    android:layout_gravity="center">
    
	<LinearLayout
	    android:layout_width="280dip"
	    android:layout_height="200dip"
	    android:orientation="vertical">
	    
	    <TextView 
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:paddingTop="5dip"
		    android:paddingLeft="5dip"
		    android:paddingRight="5dip"
		    android:paddingBottom="5dip"
		    android:textColor="#ffffff"
		    android:layout_marginLeft="3dip"
		    android:layout_marginTop="3dip"
		    android:layout_marginRight="3dip"
		    android:background="#6685DA"
		    android:text="@string/invite_friends_activity_audit_hint"
		    android:textSize="18sp"/>
		
		<EditText 
		    android:id="@+id/confirm_message_et"
		    android:layout_width="fill_parent"
		    android:inputType="textCapWords"
		    android:background="@drawable/shape_top_bottom_corner_edit_text"
		    android:paddingLeft="10dip"
		    android:paddingRight="10dip"
		    android:layout_height="100dip"
		    android:layout_margin="10dip"/>
		
		<RelativeLayout 
		    android:layout_width="fill_parent"
		    android:layout_height="fill_parent"
		    android:layout_marginBottom="5dip">
		    
		    <Button 
		        android:id="@+id/send_btn"
		        android:layout_width="125dip" 
		    	android:layout_height="wrap_content"
		        android:layout_alignParentLeft="true"
		        android:text="@string/invite_friends_activity_send_btn"
		        android:layout_marginLeft="10dip"/>
		    
		    <Button 
		        android:id="@+id/cancel_btn"
		        android:layout_width="125dip"
		    	android:layout_height="wrap_content"
		        android:layout_alignParentRight="true"
		        android:text="@string/invite_friends_activity_cancel_btn"
		        android:layout_marginRight="10dip"/>
		    
		</RelativeLayout>
	</LinearLayout>
</LinearLayout>