<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/content_bg"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/action_bar_default_height"
            android:background="@color/white" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:text="@string/register_mobile_title"
                android:textColor="@color/header_text_color"
                android:textSize="@dimen/action_bar_title_text_size" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/header_line_up_height"
            android:background="@color/header_line_up" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/header_line_down_height"
            android:background="@color/header_line_down" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:layout_marginTop="20dip"
        android:background="@drawable/box_background"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="10dip"
            android:paddingBottom="5dip"
            android:paddingLeft="10dip"
            android:paddingTop="5dip"
            android:text="@string/register_mobile_head"
            android:textColor="#36383c"
            android:textSize="18sp" >
        </TextView>

        <EditText
            android:id="@+id/registerCellPhoneEditText"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="@null"
            android:ems="11"
            android:hint="@string/register_mobile_hint"
            android:inputType="phone"
            android:maxLength="11"
            android:singleLine="true" >
        </EditText>
    </LinearLayout>
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dip"
        android:paddingLeft="10dip"
        android:paddingRight="10dip"
        android:textColor="#767573"
        android:textSize="14sp"
        android:text="绑定手机号可以找到更多好友，也可以用于找回密码" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dip"
        android:orientation="horizontal"
        android:padding="10dip" >

        <Button
            android:id="@+id/next_click_button"
            android:layout_width="0dip"
            android:layout_height="@dimen/action_bar_default_height"
            android:layout_weight="1"
            android:background="@drawable/next_click_bg"
            android:text="下一步"
            android:textColor="@android:color/white"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>