<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/content_bg"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/action_bar_default_height"
            android:background="@color/white" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:text="@string/open_contacts_activity_title"
                android:textColor="@color/header_text_color"
                android:textSize="@dimen/action_bar_title_text_size" />

            <LinearLayout
                android:id="@+id/ok_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:gravity="center" >

                <ImageView
                    android:id="@+id/ok_btn_center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/action_bar_ok" />
            </LinearLayout>

            <View
                android:layout_width="@dimen/header_line_up_height"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@id/ok_btn"
                android:background="@color/header_line_down" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/header_line_up_height"
            android:background="@color/header_line_up" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/header_line_down_height"
            android:background="@color/header_line_down" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="15dip" >

        <View
            android:layout_width="match_parent"
            android:layout_height="15dip" />

        <ImageView
            android:id="@+id/icon_imageview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/login_open_contacts_icon" />

        <TextView
            android:id="@+id/open_contacts_activity_statement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dip"
            android:gravity="left"
            android:text="@string/open_contacts_activity_statement"
            android:textColor="#898886"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dip"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/contacts_enable_btn"
                android:layout_width="0dip"
                android:layout_height="@dimen/action_bar_default_height"
                android:layout_weight="1"
                android:background="@drawable/next_click_bg"
                android:text="@string/open_contacts_activity_enable"
                android:textColor="@android:color/white"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>