<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/action_bar_default_height"
            android:background="@color/white" >

            <LinearLayout
                android:id="@+id/back_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:gravity="center" >

                <ImageView
                    android:id="@+id/back_btn_center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/action_bar_back" />
            </LinearLayout>

            <View
                android:layout_width="@dimen/header_line_up_height"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/back_btn"
                android:background="@color/header_line_down" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:text="@string/select_location_activity_title"
                android:textColor="@color/header_text_color"
                android:textSize="@dimen/action_bar_title_text_size" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/header_line_up_height"
            android:background="@color/header_line_up" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/header_line_down_height"
            android:background="@color/header_line_down" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/search_bar_bg"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingLeft="5dip"
        android:paddingRight="5dip" >

        <LinearLayout
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/search_bar_edit_normal"
            android:padding="4dip"
            android:gravity="center_vertical" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dip"
                android:src="@drawable/search_bar_icon_normal" />

            <AutoCompleteTextView
                android:id="@+id/searchkey"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/select_location_activity_tips"
                android:padding="4dip"
                android:singleLine="true"
                android:textSize="18sp" />
        </LinearLayout>

        <Button
            android:layout_marginLeft="5dip"
            android:id="@+id/search_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="searchButtonProcess"
            android:textColor="#727272"
            android:textSize="18sp"
            android:background="@drawable/select_loc_btn_bg"
            android:text="@string/select_location_ok_btn" />
    </LinearLayout>

    <com.baidu.mapapi.map.MapView
        android:id="@+id/bmapView"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:clickable="true" />

</LinearLayout>